import org.gradle.util.GradleVersion

assert GradleVersion.version('5.0').compareTo(GradleVersion.current()) <= 0 //lowest gradle version supported
if (!['5.2'].findAll { gradle.gradleVersion == it }) {
    logger.warn "WARNING: Du benytter en annen versjon av Gradle enn hva byggesystemet er testet med: ${gradle.gradleVersion}"
}

apply from: file('properties.gradle')

allprojects {
    project.version = base_version + sub_version

    defaultTasks 'build'
    group = 'no.statkart.skif'


    plugins.withType(JavaBasePlugin.class) {
        sourceCompatibility = '1.8'
        targetCompatibility = '1.8'
    }


    apply plugin: 'idea'


    repositories {
        if (MAVEN_LOCAL_FOR_PROJECT) {
            println '...initializing MAVEN_LOCAL_FOR_PROJECT'
            mavenLocal()
        }
        maven { name = 'public'; url = MAVEN_REPO }

        if (!MAVEN_LOCAL_FOR_PROJECT) {
            mavenLocal()
        }
    }

}

idea.project {
    jdkName = '1.8'
    languageLevel = '1.8'
    vcs = 'Git'
}

apply from: file('libraries.gradle')

subprojects { Project project ->
    apply plugin: 'project-report'
    apply plugin: 'base' // Så vet vi at vi har clean

    clean {
        delete 'gen'
    }

    def filterTestGroup = { Test test = test, String group, String value ->
        test.with {
            if (testFramework.class.simpleName == 'TestNGTestFramework') {
                if (value == 'INCLUDE') {
                    testFramework.options.includeGroups group
                    test.doFirst { logger.quiet "${test.name} configuration: including group '${group}'" }
                } else if (value == 'EXCLUDE') {
                    testFramework.options.excludeGroups group
                    test.doFirst { logger.quiet "${test.name} configuration: excluding group '${group}'" }
                } else if (value == 'EXCLUDE_WHEN_NO_INCLUDES') {
                    project.afterEvaluate {
                        if (testFramework.options.includeGroups.isEmpty()) {
                            testFramework.options.excludeGroups group
                            test.doFirst { logger.quiet "${test.name} configuration: excluding group '${group}'" }
                        } else {
//                            logMessageWhenTask test "${test.name} configuration: ignoring group '${group}'"
                        }
                    }
                } else {
                    assert value == 'IGNORED' //feil ved ikke gyldig verdi for filtrering av tester
                }
            } else {
                test.doFirst { logger.warn "${test.name} configuration: unable to configure groups('${group}') for ${testFramework.class.simpleName}" }
            }
        }
    }


    plugins.withType(JavaPlugin) {
        project.apply plugin: 'sktools-provided-plugin'

        // Avhengigheter som trengs for testing (riktignok ikke alle overalt)
        project.dependencies {
            testCompile libraries.testng
            testCompile libraries.mockito
            testCompile libraries.assertj

            apiElements libraries.jsr305 //for bruk av @Nullable @Nonnull osv - disse brukes på tvers av hele skif APIet
        }


        /**
         * Testing via TestNG grupper. Se bruk av @Test(groups = "") i koden.
         * Følgende parametere styrer hvilke grupper som blir kjørt:
         *
         * gradle test -DfilterSlowTests=INCLUDE
         * gradle test -DfilterOracleLatest=INCLUDE
         * gradle test -PhibernateVersion=xx for hibernate versjon spesifike tester
         * osv..
         *
         * GBOK-2266: Tilpasset oppsett for downstream testing i Jenkins
         * Dersom ingen test-oppsett spesifisert så eksluderes alle grupper.
         * Dersom test-oppsett spesifiseres, kjøres kun spesifisert gruppe.
         *  - På denne måten oppnås disjointe sett av tester slik man unngår å kjøre samme test to ganger i de ulike Jenkins jobbene.
         *
         * En har videre mulighet til ytterligere å spesifisere kombinasjoner av grupper.
         * F.eks. vil gradle test -DfilterHistorikkTests=INCLUDE -DfilterSlowTests=EXCLUDE kjøre alle tester i gruppen historikk, men ikke de som også finnes i gruppen slow.
         * Har man en test annotert med @Test(groups = "kreverHistorikk, slow") vil den testen da ikke kjøres.
         *
         * -DignoreFailures=true stopper ikke eksekvering etter feilende modul og kjører videre. Kjekt for integrasjonstesting som ønsker å kjøre alle tester alltid.
         *
         * --info gir verbos logging av hvilke grupper som faktisk blir inkludert og ekskludert.
         */
        test {
            ignoreFailures = System.getProperty('ignoreFailures', 'false') == 'true' //Gradle feiler ikke dersom denne er true.

            def filterSlowTests = System.getProperty('filterSlowTests', 'EXCLUDE_WHEN_NO_INCLUDES').toUpperCase() //gruppen kan kombineres med andre
            def filterOracleLatest = System.getProperty('filterOracleLatest', 'EXCLUDE').toUpperCase()

            filterTestGroup(it, 'slow', filterSlowTests)
            filterTestGroup(it, 'oracleLatest', filterOracleLatest) // Midlertidig lagt til denne gruppe for å exclude tester som krever seneste oracle versjon

            filterTestGroup(it, 'hibernate36', hibernateVersion == '3.6' ? 'IGNORED' : 'EXCLUDE')


            jvmArgs '-Xmx1024m'
            testLogging.showStandardStreams = true

            inputs.property 'excludedGroups', testFramework.options.includeGroups //trigger re-kjøring av test ved endring av grupper
            inputs.property 'includedGroups', testFramework.options.excludeGroups //trigger re-kjøring av test ved endring av grupper
        }
    }

    project.tasks.withType(Test) { Test test ->  //felles for alle test-tasks
        def singleVm = rootProject.ext.properties['service_mode'] == 'SINGLE_VM'
        def server = rootProject.ext.properties['service_mode'] == 'JEE'
        logger.debug "single_vm is set to ${singleVm} for ${project.path}"
        logger.debug "server is set to ${server} for ${project.path}"

        useTestNG() {  //benytter kun TestNG over alt
//            listeners << 'org.uncommons.reportng.HTMLReporter' // Gradles innebygde rapport viser ikke skipped
            listeners << 'org.testng.reporters.XMLReporter' // For Jenkins, siden Gradle 1.4+ ikke tar med default listeners som standard lenger
        }

        filterTestGroup(test, 'broken', 'EXCLUDE')
        filterTestGroup(test, 'singlevm-required', singleVm ? 'IGNORED' : 'EXCLUDE')
        filterTestGroup(test, 'server-required', server ? 'IGNORED' : 'EXCLUDE')

        systemProperties "org.uncommons.reportng.stylesheet": "${project.rootProject.file('all/test/report/reportng-1.1.3/stylesheets/hudsonesque.css')}"
        systemProperties "org.uncommons.reportng.title": "${project.name} Report"


        inputs.property 'singleVm', singleVm //trigger re-kjøring av test ved endring av parameter

        if (rootProject.hasProperty('test.remote.debug')) {
            jvmArgs '-Xdebug'
            jvmArgs '-Xnoagent'
            jvmArgs '-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y'
        }

        //listening to test execution events
        afterTest { descriptor, result ->
            logger.lifecycle("${result.toString() == 'SUCCESS' ? ' Successfully tested' : 'Failed testing'} : ${descriptor.className}#${descriptor.name}")
            if (result.resultType.name() == 'FAILURE') {
                logger.error("${result.exception}")
            }
        }
    }


    project.idea.module {
        // Får Idea til å legge build katalog for alle moduler i en egen felles topp katalog (out/production, out/test)
        inheritOutputDirs = true

        downloadSources = true
//        downloadJavadoc = true //for jdbc dokumentasjon
    }
}

//SKIF-266: versjon informasjon i distribusjon
allprojects {
    afterEvaluate {
        tasks.withType(Jar) {
            manifest {
                attributes([
                        'Specification-Title': project.name,
                        'Specification-Vendor': 'Statens kartverk',
                        'Specification-Version': base_version,

                        //misc build info
                        'Build-By'     : System.getProperty('user.name'),
                        'Build-Machine': java.net.InetAddress.localHost.hostName,
                        'Build-Repo': MAVEN_REPO,

                        'Implementation-Title': "${project.name} bygget for ${(project.version == null || project.version.contains('-SNAPSHOT') || project.version.contains('-build')) ? 'TEST' : 'Produksjon'}",
                        'Implementation-Vendor': 'Statens kartverk',
                        'Implementation-Version': project.version,
                ])
            }
        }
    }
}


buildscript {

    //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
    // Miljøvariable for konfigurasjon av byggemiljø
    //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
    [
            'LOCALHOSTNAME',
            'WEBLOGIC_HOME',
            'WEBLOGIC_VERSION',
    ].each { key ->
        if (!project.hasProperty(key) && System.getenv(key) != null) {
            project.ext.setProperty(key, System.getenv(key))
        }
    }

    if (!project.hasProperty('LOCALHOSTNAME')) {
        project.ext.setProperty('LOCALHOSTNAME', java.net.InetAddress.localHost.canonicalHostName)
    }

    ext.ORA_DEBUG = Boolean.valueOf("${rootProject.properties.get('ORA_DEBUG', System.getenv('ORA_DEBUG')) ?: 'false'}")

    ext.MAVEN_REPO = rootProject.properties.get('MAVEN_REPO', System.getenv('MAVEN_REPO'))
    if (ext.MAVEN_REPO == null) {
        ext.MAVEN_REPO = 'https://nexus.statkart.no/repository/public/'
        logger.info "warning: MAVEN_REPO not defined. Defaulting to ${MAVEN_REPO}"
    }

    //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
    // Switch for tentativ utvikling mot lokalt maven repository
    // Se http://forums.gradle.org/gradle/topics/dependency_resolution_in_gradle_1_0_milestone_8 for teknisk beskrivelse.
    //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
    project.ext.set('MAVEN_LOCAL_FOR_BUILDSYSTEM', (Boolean.parseBoolean(System.getenv('MAVEN_LOCAL')) || Boolean.parseBoolean(System.getenv('MAVEN_LOCAL_FOR_BUILDSYSTEM'))) ? true : null)
    project.ext.set('MAVEN_LOCAL_FOR_PROJECT', (Boolean.parseBoolean(System.getenv('MAVEN_LOCAL')) || Boolean.parseBoolean(System.getenv('MAVEN_LOCAL_FOR_PROJECT'))) ? true : null)


    repositories {
        if (MAVEN_LOCAL_FOR_BUILDSYSTEM) {
            println '...initializing MAVEN_LOCAL_FOR_BUILDSYSTEM'
            mavenLocal()
        }
        maven { name = 'public'; url = MAVEN_REPO }

        if (!MAVEN_LOCAL_FOR_BUILDSYSTEM) {
            mavenLocal()
        }
    }

    dependencies {
        classpath 'no.statkart.sktools.gradle:gradle-plugins:trunk-build667'
    }
}
